# featherkit-tutorials

./: .gitignore  CMakeLists.txt  LICENSE  README.md
00_windowandinput/: CMakeLists.txt
00_windowandinput/src/: main.cpp
01_quadrendering/: CMakeLists.txt
01_quadrendering/src/: main.cpp
02_gameapplication/: CMakeLists.txt
02_gameapplication/src/: main.cpp  megagame.cpp  megagame.h
03_gamestatemachine/: CMakeLists.txt
03_gamestatemachine/src/: gameplaystate.cpp  gameplaystate.h  introstate.cpp  megagame.cpp  megagame.h
04_tilesanimations/: CMakeLists.txt
04_tilesanimations/src/: gameplaystate.cpp  gameplaystate.h  introstate.cpp  introstate.h  megagame.cpp  megagame.h
textures/: slime.xcf
